--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Nicolas Nellum"
-  avatar           : "C:\Users\nnnel\Desktop\calinic.github.io\images\me.jpg"
+  avatar           : "\Users\nnnel\Pictures\github\me.jpg"
   bio              : "College student that **loves** computers!"
   location         : "Los Angeles, CA"
   email            :
