--- a/_config.yml
+++ b/_config.yml
@@ -97,8 +97,10 @@ author:
   avatar           : "/images/me.jpg"
   bio              : "**Love** the beach"
   location         : "Los Angeles, CA"
-  email            :
-  links:
+  email            : "nnnellum@gmail.com"
+  github           : "calinic"
+
+    links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
